--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "nodemon src/server.js"
     },
     "dependencies": {
+        "@socket.io/admin-ui": "^0.5.1",
         "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
@@ -18,7 +19,8 @@
         "mailgen": "^2.0.27",
         "mongoose": "^7.0.1",
         "nodemailer": "^6.9.1",
-        "otp-generator": "^4.0.1"
+        "otp-generator": "^4.0.1",
+        "socket.io": "^4.6.1"
     },
     "devDependencies": {
         "dotenv": "^16.0.3",
